--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,10 @@ url: https://rodrivaldivia.github.io
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
-# Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/lemon-header.svg"
-
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: "/assets/favicon.ico"
 
+search: false
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
 color_scheme: dark
