--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ aux_links:
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: "/assets/favicon.ico"
 
-search: false
+search_enabled: false
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
 color_scheme: dark
